--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Project Bowen</title>
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
-        <link rel="stylesheet" href="styles/style.css" />
-    </head>
-    <body>
-        <div class="container">
-            <h1 id="title" class="center">Community Resources</h1>
-            <div id="search" class="row pt center">
-                <label for="searchTerm">Search: </label>
-                <input type="text" id="searchTerm" name="searchTerm" required minlength="3" size="30"/>
-            </div>
-            <div class="row pt center">
-                <!-- <div class="column right"> -->
-                    <lable for="category">Category: </lable>
-                    <select name="category" id="category">
-                        <option value="">Choose input...</option>
-                        <option value="stuff">stuff</option>
-                        <option value="and things">and things</option>
-                    </select> 
-                <!-- </div> -->
-            </div>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project Bowen</title>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="styles/style.css" />
+</head>
+
+<body onload="getCategories()">
+    <div class="container">
+        <h1 id="title" class="center">Community Resources</h1>
+        <div id="search" class="row pt center">
+            <label for="searchTerm">Search: </label>
+            <input type="text" id="searchTerm" name="searchTerm" required minlength="3" size="30" />
         </div>
+        <div class="row pt center">
+            <lable for="category">Category: </lable>
+            <select name="category" id="category">
+                <option value="">Choose input...</option>
+            </select>
+        </div>
+    </div>
 
 
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
-        <script src="javascript/helpers.js"></script>
-        <script src="javascript/connect.js"></script>
-    </body>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+    <script src="javascript/index.js"></script>
+    <script src="javascript/helpers.js"></script>
+    <script src="javascript/connect.js"></script>
+</body>
+
 </html>
