--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/global-insecurity.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Bowen</title>
+    <title>Library of Online Community Resources</title>
   </head>
   <body>
     <div id="root"></div>
