--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/global-insecurity.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo_leaf.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library of Online Community Resources</title>
   </head>
